# 9paste

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: clipboard.rs  config.rs  dashboard.rs  hotkeys.rs  ipc.rs  lib.rs  main.rs  quick_menu.rs  recipe.rs  transformers.rs  tray.rs
